# ai4data

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  extract_demo.ipynb  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
apps/anomaly_review/: feedback.py  main.py
apps/anomaly_review/static/: index.html
docs/: _config.yml  _toc.yml  bibliography.bib  data-discoverability.md  generative-ai-for-metadata-quality.md  introduction.md  mcp-for-official-statistics.md  repo-structure.md
docs/anomaly-detection/: anomaly-detection.md  feedback-system.md
docs/data-discoverability/: data-discoverability.md  embedding-fine-tuning.md
docs/data_use/: data_use.md
docs/inclusive-ai/: inclusive-ai.md
docs/mcp/: mcp-for-official-statistics.md  mcp.md
docs/metadata-augmentation/: index.md  methodology.md
docs/metadata-reviewer/: agentic-approach.md  implementation.md  overview.md
docs/metadata-reviewer/user-manual/: advanced-usage.md  appendix-agents-manifest.md  index.md  (+11 more)
docs/partnerships/: partnerships.md
experimental/data-snapshot/: .env.template  .gitignore  LICENSE  README.md  create_tasks.py  create_tasks_with_prelabeling.py  docker-compose.yml  pyproject.toml
experimental/data-snapshot/.agents/rules/: coding-standards.md  project-context.md
experimental/data-snapshot/.agents/skills/create-adapter/: SKILL.md
experimental/data-snapshot/.agents/workflows/: develop-adapter.md
experimental/data-snapshot/docs/: benchmark_paper_draft.md  create_tasks_manual.py  data-snapshot-eval-v1.3.schema.json  evaluation_spec.md  hf_dataset_card.md  manual_setup.md  metadata_schema.json
experimental/data-snapshot/notebooks/characterization/: api_tester.ipynb  cost_viewer.ipynb
experimental/data-snapshot/notebooks/characterization/data_modality_taxonomy/: data_modality_taxnomy_prompt.md  data_modality_taxonomy_prwp.md  data_modality_taxonomy_refugee.md
experimental/data-snapshot/notebooks/characterization/snapshot_to_shortdesc/: 4o-mini_pipeline-prwp.ipynb  4o-mini_pipeline-refugee.ipynb  4o-mini_pipeline-unhcr.ipynb  characterization.py  export_short_description.ipynb  label_count.ipynb  system_message.md  user_message.md
experimental/data-snapshot/notebooks/demos/: doclayout-yolo_demo.ipynb  hf_load_dataset_demo.ipynb  ls_sdk_demo.ipynb  yolo26_demo.ipynb
experimental/data-snapshot/notebooks/utils/: average_snapshot_area.ipynb  count_pages_with_snapshots.ipynb  filter_metadata.ipynb  guid_to_schema.ipynb  metrics_viewer.ipynb  page_count.ipynb  refugee_metadata_mapping.ipynb  sampler_bulk.ipynb  script_args_generator.ipynb  split_preds.ipynb  visualize_pages_sampler.ipynb
experimental/data-snapshot/src/data_snapshot/: __init__.py  constants.py  utils.py
experimental/data-snapshot/src/data_snapshot/annotation/: __init__.py  create_tasks.py  create_tasks_with_prelabeling.py  export_project.py  import_project.py  labeling_interface_template.xml  labelstudio_adapter.py  ls_helpers.py  merge_class_preds.py
experimental/data-snapshot/src/data_snapshot/evaluation/: __init__.py  evaluate_model.py  filter_small_preds.py  merge_batch_preds.py  visualize_pages.py
experimental/data-snapshot/src/data_snapshot/inference/: __init__.py  batch_runner.py  doclayoutyolo.py  tfid.py  yolo11.py  yolo26.py
experimental/data-snapshot/src/data_snapshot/metadata/: __init__.py  enforce_metadata_schema.py  unhcr_to_schema.py
experimental/data-snapshot/src/data_snapshot/metadata/docs/: UNHCR_TO_SCHEMA_MAPPING.md
experimental/data-snapshot/src/data_snapshot/misc/: __init__.py  annotations_to_hf_dataset.py  extract_snapshots.py
experimental/data-snapshot/src/dsa/: constants.py  evaluate_model.py  ls_helpers.py  utils.py
experimental/data-snapshot/src/dsa/adapters/: __init__.py  doclayoutyolo.py  labelstudio.py  tfid.py  yolo11.py  yolo26.py
experimental/data-snapshot/src/scripts/: annotations_to_hf_dataset.py  batch_runner.py  export_project.py  extract_snapshots.py  filter_small_preds.py  import_project.py  merge_batch_preds.py  merge_class_preds.py  visualize_pages.py
experimental/data-snapshot/src/scripts/metadata/: enforce_metadata_schema.py  unhcr_to_schema.py
experimental/data-snapshot/src/scripts/metadata/docs/: UNHCR_TO_SCHEMA_MAPPING.md
experimental/data-snapshot/tests/: test_adapter_utils.py  test_adapters.py  test_evaluate_model.py
notebooks/: dataset_extraction_demo.ipynb  metadata-quality-assessment-with-llm.ipynb
notebooks/data-anomaly/: Timeseries_Anomaly_Explanation_with_LLMs.ipynb  WDI_Long_Format_Anomaly_Explanation.ipynb
notebooks/error-scanner/: error_scanner_quickstart.ipynb
notebooks/metadata-reviewer/: async_run_example.ipynb  metadata_reviewer_quickstart_anthropic.ipynb  metadata_reviewer_quickstart_azure.ipynb  metadata_reviewer_quickstart_ollama.ipynb  metadata_reviewer_quickstart_openai.ipynb  non-default_manifest_example.ipynb
research/pift-toolkit/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
research/pift-toolkit/configs/: example.yaml
research/pift-toolkit/docs/: configuration.md  deployment.md  method.md  pipeline.md
research/pift-toolkit/examples/sample_catalogue/: records.jsonl
research/pift-toolkit/src/pift/: __init__.py  benchmark.py  cli.py  config.py  encoder.py  evaluate.py  finetune.py  generate.py  judge.py  llm.py  metrics.py  mine.py  records.py  search.py  serialize.py
research/pift-toolkit/tests/: test_smoke.py
scripts/: simple_extract.py
scripts/metadata/: README.md  llm_metadata_extractor.py  pdf_extractor.py  pdf_to_metadata.py  wds_mapper.html  wds_mapper_app.py  wds_schema_validator.py  wds_to_schema.py
src/ai4data/: __init__.py
tests/: conftest.py  test_anomaly_explanation_helpers.py  test_catalog_extract.py  test_chunking.py  test_deduplication.py  test_discovery_auth.py  test_discovery_document_fetch.py  test_discovery_include_resources.py  test_e2e_extraction.py  test_example.py  test_extractors.py  test_models.py  test_schemas.py  test_text_normalizer.py  test_utils.py
tests/fixtures/: extract_study_with_metadata.json
(+92 files in other folders)
