[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "ai4data"
description = "AI for Data - Data for AI"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["ai4data", "data4ai"]
authors = [{ name = "Development Data Group", email = "ai4data@worldbank.org" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.11"
dependencies = [
	"requests>=2.32.3",
	"pandas>=2.2.3",
	"pycountry>=22.12.1",
]
[project.optional-dependencies]
# Core data use extraction (dataset mention extraction from text/documents)
datause = [
	"gliner2>=0.1.0",
	"torch>=2.0.0",
	"transformers>=4.30.0",
	"pymupdf>=1.23.0",
	"rapidfuzz>=3.0.0",
]

# Harmonization (clustering and deduplication of dataset names)
harmonization = [
	"ai4data[datause]",  # Harmonization requires datause
	"geonamescache>=2.0.0",
	"nltk>=3.8.0",
	"numpy>=1.24.0",
	"sentence-transformers>=2.2.0",
	"scikit-learn>=1.3.0",
	"tqdm>=4.65.0",
]

# Anomaly detection in data
anomaly = [
	"numpy>=1.24.0",
	"pandas>=2.0.0",
	"scikit-learn>=1.3.0",
	"scipy>=1.11.0",
]

# All capabilities
all = [
	"ai4data[datause]",
	"ai4data[harmonization]",
	"ai4data[anomaly]",
]

# Documentation
docs = [
	"docutils==0.17.1", # pinned to docutils==0.17.1 due to https://github.com/worldbank/template/issues/60. See also: https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/worldbank/ai4data"
"Bug Reports" = "https://github.com/worldbank/ai4data/issues"
"Source" = "https://github.com/worldbank/ai4data"

[tool.codespell]
skip = 'docs/_build,docs/bibliography.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,Nd"

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*"
]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"
