[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "ai4data"
description = "AI for Data - Data for AI"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["ai4data", "data4ai"]
authors = [{ name = "Development Data Group", email = "ai4data@worldbank.org" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.11"
dependencies = [
	"fire>=0.6.0",
	"requests>=2.32.3",
	"pandas>=2.2.3",
	"pycountry>=22.12.1",
	"fastapi>=0.135.1",
	"uvicorn>=0.42.0",
	"pexpect>=4.9.0",
]
[project.optional-dependencies]
# Core data use extraction (dataset mention extraction from text/documents)
datause = [
	"gliner2>=0.1.0",
	"torch>=2.0.0",
	"transformers>=4.30.0",
	"pymupdf>=1.23.0",
	"rapidfuzz>=3.0.0",
]

# Harmonization (clustering and deduplication of dataset names)
harmonization = [
	"ai4data[datause]",  # Harmonization requires datause
	"geonamescache>=2.0.0",
	"nltk>=3.8.0",
	"numpy>=1.24.0",
	"sentence-transformers>=2.2.0",
	"scikit-learn>=1.3.0",
	"tqdm>=4.65.0",
]

# Anomaly detection in data
anomaly = [
	"numpy>=1.24.0",
	"pandas>=2.0.0",
	"scikit-learn>=1.3.0",
	"scipy>=1.11.0",
	"jinja2>=3.0.0",
	"pydantic>=2.0.0",
	"openpyxl>=3.1.5",
	"openai>=2.29.0",
	"google-genai>=1.68.0",
	"anthropic>=0.40.0",
]

# Semantic search
search = [
  "sentence-transformers>=2.7.0",
  "scikit-learn>=1.4.2",
  "faiss-cpu>=1.7.4",
  "numpy>=1.24.0",
  "requests>=2.31.0",
  "countrycode>=0.4.0",
]

# Metadata (WDS mapper, schema mapping, PDF-to-metadata extraction, augmentation)
metadata = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "requests>=2.31.0",
  "countrycode>=0.4.0",
  "pymupdf4llm>=0.0.2",
  "pymupdf-layout>=1.0.0",
  "litellm>=1.0.0",
  "azure-identity>=1.15.0",
  "pydantic>=2.0.0",
  "sentence-transformers>=2.2.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "tqdm>=4.65.0",
]

# NADA discovery (catalog fetch, metadata templates, PDF helpers)
discovery = [
  "httpx>=0.27.0",
  "backoff>=2.2.1",
  "tqdm>=4.65.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "jinja2>=3.0.0",
  "numpy>=1.24.0",
  "pandas>=2.2.3",
  "scikit-learn>=1.3.0",
  "beautifulsoup4>=4.12.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-huggingface>=0.1.0",
  "tika>=2.6.0",
  "pymupdf>=1.23.0",
]

# Metadata reviewer — base (no LLM provider)
metadata-reviewer = [
  "autogen-core>=0.7.5",
  "autogen-agentchat>=0.7.5",
  "httpx>=0.27.0",
  "pyyaml>=6.0.0",
]

# LLM provider extras — combine with metadata-reviewer:
#   pip install ai4data[metadata-reviewer,openai]
#   pip install ai4data[metadata-reviewer,anthropic]
#   pip install ai4data[metadata-reviewer,azure]
#   pip install ai4data[metadata-reviewer,ollama]
openai = [
  "autogen-ext[openai]>=0.7.5",
  "openai>=2.29.0",
]

anthropic = [
  "autogen-ext[anthropic]>=0.7.5",
]

azure = [
  "autogen-ext[openai]>=0.7.5",
  "openai>=2.29.0",
  "azure-identity>=1.15.0",
]

ollama = [
  "autogen-ext[ollama]>=0.7.5",
]

# All capabilities
all = [
	"ai4data[datause]",
	"ai4data[harmonization]",
	"ai4data[anomaly]",
	"ai4data[search]",
	"ai4data[metadata]",
	"ai4data[discovery]",
	"ai4data[metadata-reviewer]",
]

# Documentation
docs = [
	"docutils==0.17.1", # pinned to docutils==0.17.1 due to https://github.com/worldbank/template/issues/60. See also: https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/worldbank/ai4data"
"Bug Reports" = "https://github.com/worldbank/ai4data/issues"
"Source" = "https://github.com/worldbank/ai4data"

[tool.codespell]
skip = 'docs/_build,docs/bibliography.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,Nd"

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai4data"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
