[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pift-toolkit"
version = "0.1.0"
description = "Permutation-invariant fine-tuning of embedding models for structured-metadata retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Training, mining, evaluation, and serving need the deep-learning stack.
train = [
    "torch>=2.1",
    "sentence-transformers>=3.0",
    "datasets>=2.16",
    "transformers>=4.40",
]
# Synthetic query generation against a hosted LLM.
generate = [
    "anthropic>=0.40",
    "openai>=1.40",
]
all = [
    "pift-toolkit[train,generate]",
]

[project.scripts]
pift = "pift.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
